# newton-fractal

./: README.md
newton-fractal/: AppWindow.cpp  AppWindow.hpp  CMakeLists.txt  NewtonFractal.cpp  NewtonFractal.hpp  main.cpp
newton-fractal/kernel/: Fractal.ispc  fractal.ispc
newton-fractal/src/: AppWindow.cpp  AppWindow.hpp  NewtonFractal.cpp  NewtonFractal.hpp
